--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
+    "tsyringe": "^4.8.0"
   }
 }
