--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.4.2",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mysql2": "^3.6.5",
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
