--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "typeorm": "^0.3.17",
+    "typescript": "^5.3.3"
   }
 }
